WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44274
Windowless plugins don't paint in WebKit2 on Windows
https://bugs.webkit.org/show_bug.cgi?id=44274
Summary
Windowless plugins don't paint in WebKit2 on Windows
Adam Roben (:aroben)
Reported
2010-08-19 10:34:29 PDT
Windowless plugins don't paint in WebKit2 on Windows
Attachments
Patch
(10.26 KB, patch)
2010-08-19 10:35 PDT
,
Adam Roben (:aroben)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-08-19 10:35:28 PDT
Created
attachment 64870
[details]
Patch
Adam Roben (:aroben)
Comment 2
2010-08-19 11:06:36 PDT
<
rdar://problem/8330395
>
Adam Roben (:aroben)
Comment 3
2010-08-19 14:27:39 PDT
Committed
r65705
: <
http://trac.webkit.org/changeset/65705
>
WebKit Review Bot
Comment 4
2010-08-19 16:44:22 PDT
http://trac.webkit.org/changeset/65705
might have broken SnowLeopard Intel Release (Tests) The following changes are on the blame list:
http://trac.webkit.org/changeset/65699
http://trac.webkit.org/changeset/65700
http://trac.webkit.org/changeset/65701
http://trac.webkit.org/changeset/65702
http://trac.webkit.org/changeset/65703
http://trac.webkit.org/changeset/65704
http://trac.webkit.org/changeset/65705
http://trac.webkit.org/changeset/65706
http://trac.webkit.org/changeset/65707
http://trac.webkit.org/changeset/65708
http://trac.webkit.org/changeset/65709
http://trac.webkit.org/changeset/65710
http://trac.webkit.org/changeset/65711
http://trac.webkit.org/changeset/65712
http://trac.webkit.org/changeset/65713
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug