WebKit2/WebProcess/Plugins/Netscape/NetscapePlugin.cpp
@@ -46,6 +46,11 @@ NetscapePlugin::NetscapePlugin(PassRefPtr<NetscapePluginModule> pluginModule)
     , m_pluginModule(pluginModule)
     , m_npWindow()
     , m_isStarted(false)
+#if PLATFORM(MAC)
+    , m_isWindowed(false)
+#else
+    , m_isWindowed(true)
+#endif
     , m_inNPPNew(false)
     , m_loadManually(false)
 #if PLATFORM(MAC)
