WebKit2/WebProcess/Plugins/Plugin.h
@@ -63,7 +63,8 @@ public:
     // Destroys the plug-in.
     virtual void destroy() = 0;
 
-    // Tells the plug-in to paint itself into the given graphics context. The passed in dirty rect is in window coordinates.
+    // Tells the plug-in to paint itself into the given graphics context. The passed-in context and
+    // dirty rect are in window coordinates. The context is saved/restored by the caller.
     virtual void paint(WebCore::GraphicsContext*, const WebCore::IntRect& dirtyRect) = 0;
 
 #if PLATFORM(MAC)
